# gnunet-android

./: .gitignore  README.md
.github/workflows/: android.yml  build-apk.yml
android_studio/: settings.gradle.kts
android_studio/app/: build.gradle.kts
android_studio/app/src/androidTest/java/org/gnu/gnunet/: ExampleInstrumentedTest.kt
android_studio/app/src/main/: AndroidManifest.xml
android_studio/app/src/main/assets/: gnunet.conf  private_key.ecc
android_studio/app/src/main/assets/plugins/: libgnunetutil.so#
android_studio/app/src/main/cpp/: CMakeLists.txt  GnunetChatIpcBridge.cpp  native-lib.cpp
android_studio/app/src/main/java/org/gnu/gnunet/: MainActivity.kt
android_studio/app/src/main/res/values/: strings.xml  themes.xml
android_studio/app/src/main/res/values-night/: themes.xml
android_studio/app/src/test/java/org/gnu/gnunet/: ExampleUnitTest.kt
android_studio/distribution/gmp/lib/arm64-v8a/include/: gmp.h
android_studio/distribution/gnunet/lib/arm64-v8a/include/: block_fs.h  block_regex.h  gettext.h  gnu_name_system_protocols.h  gnu_name_system_record_types.h  gnunet_abd_service.h  gnunet_applications.h  gnunet_arm_service.h  gnunet_block_group_lib.h  gnunet_block_lib.h  gnunet_block_plugin.h  gnunet_common.h  gnunet_consensus_service.h  gnunet_constants.h  gnunet_conversation_service.h  gnunet_core_service.h  gnunet_curl_lib.h  gnunet_datacache_lib.h  gnunet_datacache_plugin.h  gnunet_datastore_plugin.h  gnunet_dht_service.h  gnunet_dhtu_plugin.h  gnunet_fs_service.h  gnunet_gns_service.h  gnunet_gnsrecord_lib.h  gnunet_hello_uri_lib.h  gnunet_json_lib.h  gnunet_messenger_service.h  gnunet_mhd_compat.h  gnunet_mhd_lib.h  gnunet_microphone_lib.h  gnunet_namecache_plugin.h  gnunet_namecache_service.h  gnunet_namestore_plugin.h  gnunet_namestore_service.h  gnunet_nat_service.h  gnunet_nc_lib.h  gnunet_nt_lib.h  gnunet_op_lib.h  gnunet_peerstore_plugin.h  (+25 more)
android_studio/distribution/gnunet_plugin_peerstore_sqlite/lib/arm64-v8a/include/: gnunet_peerstore_plugin.h
android_studio/distribution/gnunetchat/lib/arm64-v8a/include/: gnunet_chat_account.h  gnunet_chat_attribute_process.h  gnunet_chat_contact.h  gnunet_chat_invitation.h  gnunet_chat_tagging.h  gnunet_chat_ticket.h  gnunet_chat_uri.h
android_studio/distribution/gnunetgnsrecord/lib/arm64-v8a/include/: gnunet_gnsrecord_json_lib.h  gnunet_gnsrecord_plugin.h
android_studio/distribution/gnunetjson/lib/arm64-v8a/include/: gnunet_json_lib.h
android_studio/distribution/gnunetsq/lib/arm64-v8a/include/: gnunet_sq_lib.h
android_studio/distribution/gnunetutil/lib/arm64-v8a/include/: gnunet_bandwidth_lib.h  gnunet_buffer_lib.h  gnunet_configuration_lib.h  gnunet_container_lib.h  gnunet_crypto_lib.h  gnunet_disk_lib.h  gnunet_helper_lib.h  gnunet_network_lib.h  gnunet_protocols.h  gnunet_service_lib.h
android_studio/distribution/libgnunet/lib/arm64-v8a/include/: block_dns.h  block_regex.h  gnu_name_system_record_types.h  gnu_name_system_service_ports.h  gnunet_bio_lib.h  gnunet_cadet_service.h  gnunet_client_lib.h  gnunet_common.h  gnunet_crypto_lib.h  gnunet_datastore_service.h  gnunet_db_lib.h  gnunet_dht_block_types.h  gnunet_dht_service.h  gnunet_disk_lib.h  gnunet_dns_service.h  gnunet_dnsstub_lib.h  gnunet_getopt_lib.h  gnunet_gns_service.h  gnunet_identity_service.h  gnunet_load_lib.h  gnunet_messenger_service.h  gnunet_mq_lib.h  gnunet_mst_lib.h  gnunet_namestore_service.h  gnunet_nat_auto_service.h  gnunet_nat_lib.h  gnunet_nse_service.h  gnunet_os_lib.h  gnunet_peer_lib.h  gnunet_plugin_lib.h  gnunet_pq_lib.h  gnunet_program_lib.h  gnunet_protocols.h  gnunet_reclaim_lib.h  gnunet_reclaim_service.h  gnunet_regex_service.h  gnunet_rest_lib.h  gnunet_revocation_service.h  gnunet_secretsharing_service.h  gnunet_setu_service.h  (+7 more)
android_studio/distribution/libgnunetchat/lib/arm64-v8a/include/: gnunet_chat_accounts.h  gnunet_chat_context.h  gnunet_chat_discourse.h  gnunet_chat_file.h  gnunet_chat_group.h  gnunet_chat_handle.h  gnunet_chat_lib.h  gnunet_chat_lobby.h  gnunet_chat_message.h  gnunet_chat_ticket_process.h  gnunet_chat_util.h
android_studio/distribution/libgnunethello/lib/arm64-v8a/include/: gnunet_hello_uri_lib.h
android_studio/distribution/libgnunetpeerstore/lib/arm64-v8a/include/: gnunet_peerstore_service.h
android_studio/distribution/libgnunettransportapplication/lib/arm64-v8a/include/: gnunet_transport_application_service.h
android_studio/distribution/libgnunettransportcommunicator/lib/arm64-v8a/include/: gnunet_transport_communication_service.h
android_studio/distribution/libgnunettransportmonitor/lib/arm64-v8a/include/: gnunet_transport_monitor_service.h
android_studio/distribution/libgnunetutil/lib/arm64-v8a/include/: gnunet_child_management_lib.h  gnunet_common.h  gnunet_config.h  gnunet_configuration_lib.h  gnunet_container_lib.h  gnunet_crypto_lib.h  gnunet_disk_lib.h  gnunet_dnsparser_lib.h  gnunet_error_codes.h  gnunet_getopt_lib.h  gnunet_helper_lib.h  gnunet_mq_lib.h  gnunet_os_lib.h  gnunet_plugin_lib.h  gnunet_program_lib.h  gnunet_protocols.h  gnunet_service_lib.h  gnunet_util_lib.h
android_studio/distribution/libgpg-error/lib/arm64-v8a/include/: gpg-error.h
android_studio/distribution/libiconv/lib/arm64-v8a/include/: iconv.h
android_studio/distribution/libsodium/lib/armeabi-v7a/: abi.json
android_studio/distribution/libsodium/lib/x86/: abi.json
android_studio/distribution/libsodium/lib/x86_64/: abi.json
android_studio/distribution/pkgconfig/: gnunet.pc  gnunetblock.pc  gnunetblockgroup.pc  gnunetchat.pc  gnunetgnsrecord.pc  gnunethello.pc  gnunetjson.pc  gnunetregexblock.pc  gnunetutil.pc  gpg-error.pc  gpg-error.pc~  jansson.pc  libcurl.pc  libgcrypt.pc  libgcrypt.pc~  libgmp.pc  libgmp.pc~  libidn.pc  libltdl.pc  libltdl.pc~  libmicrohttpd.pc  libsodium.pc  libsodium.pc~  libunistring.pc  libzlib.pc  sqlite3.pc  wolfssl.pc
android_studio/distribution/wolfssl/lib/arm64-v8a/include/wolfssl/: options.h
android_studio/gradle/: libs.versions.toml
android_studio/gradle/wrapper/: gradle-wrapper.properties
(+4 files in other folders)
